# herdr

./: .gitignore  README.md  herdr-claude-panes.py  herdr-panes.json  notifier.py  pyproject.toml
.claude/prompts/: architect.md  cleaner.md  coder.md  constitution.md  e2e-interpreter.md  hardender.md  qa.md  specifier.md
src/herdr_claude_panes/: cli.py
tests/: test_cli.py
